# nodegui-plugin-qhotkey

./: CMakeLists.txt  README.md  package.json
.github/workflows/: build.yml
QHotkey-1.5.0/: README_nodegui_plugin.md
scripts/: setupBinary.js
src/: addon.ts  demo.ts  main.ts
src/cpp/: QHotkey_wrap.cpp  QHotkey_wrap.h  main.cpp  nhotkey.hpp
